[package]
name = "postbus"
version = "0.1.0"
authors = ["Leah <leah@hrmny.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- ACTORS --
#riker = "0.3"
#riker-patterns = "0.3"
#stage = { path = "./stage-core" }
#xtra = { version = "0.2", features = ["with-tokio-0_2"] }
xtra = { path = "../xtra", features = ["with-tokio-0_2"] }
spaad = { path = "../spaad/spaad" }

# -- DB --
r2d2 = { version = "0.8.9" }
diesel = { version = "1", features = ["postgres", "uuidv07", "r2d2"] }
#sqlx = { version = "0.2", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid" ] }
#sqlx-macros = { git =  "https://github.com/launchbadge/sqlx", version = "0.2", default-features = false, features = [ "runtime-tokio" ] }

futures = "0.3.5"
tokio = { version = "0.2", features = ["full"] }
telegram-bot-async = "0.8.2"
uuid = { version = "0.8", features = ["v4"] }
serde = "1"
serde_derive = "1"
dotenv = "0.15"
chrono = "0.4"

#log = "0.4"
#pretty_env_logger = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"

#[patch.crates-io]
#xtra = { git = 'https://github.com/Restioson/xtra' }
#spaad = { git = 'https://github.com/Restioson/spaad' }
